kubernetes/apps/podbook/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podbook
  labels:
    app: podbook
spec:
  selector:
    matchLabels:
      app: podbook
  template:
    metadata:
      labels:
        app: podbook
    spec:
      containers:
        - name: podbook
          image: dartagan/podbook-minimal # {"$imagepolicy": "apps:podbook"}
          ports:
            - containerPort: 5000
          volumeMounts:
            - mountPath: /podbook/books
              name: audio
              subPath: audiobooks/
              readOnly: true
        - name: nginx
          image: nginx:1.25.5 # {"$imagepolicy": "apps:nginx"}
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /etc/nginx/default.conf
              name: config
              subPath: default.conf
              readOnly: true
            - mountPath: /var/www/media
              name: audio
              subPath: audiobooks/
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: podbook
        - name: audio
          persistentVolumeClaim:
            claimName: audio-rw-pvc
