kubernetes/apps/podbook/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podbook-rebound
spec:
  selector:
    app: podbook-rebound
  ports:
    - protocol: TCP
      port: 8000
