kubernetes/apps/podbook/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podbook-rebound
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    # Podbook provides its own basicauth (because it only works for the site and feeds, but can't be used on the media)
spec:
  ingressClassName: ingress-nginx-internal
  tls:
    - hosts:
        - podbook.immortalkeep.com
      secretName: podbook-rebound-ingress-tls
  rules:
  - host: podbook.immortalkeep.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: podbook-rebound
            port:
              number: 8000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podbook-rebound-external
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    # Podbook provides its own basicauth (because it only works for the site and feeds, but can't be used on the media)
spec:
  ingressClassName: ingress-nginx-external
  tls:
    - hosts:
        - podbook.immortalkeep.com
      secretName: podbook-rebound-ingress-tls
  rules:
  - host: podbook.immortalkeep.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: podbook-rebound
            port:
              number: 8000
